# ChangeLog of Nadoka($Rev$)
# $Id$ 


2005-06-13(Mon) 00:11:39 +0900  Koichi Sasada  <ko1@atdot.net>

	* ndk/server_state.rb : fix typo

	* ndk/config.rb : see ENV['LANG'] to decide filename encoding

	* ndk/version.rb : fix version format

	* ndk/bot.rb : fix comment


2005-06-10(Fri) 04:38:25 +0900  Koichi Sasada  <ko1@atdot.net>

	* ndk/server.rb : fix logic operation


2005-06-09(Thu) 17:22:25 +0900  Koichi Sasada  <ko1@atdot.net>

	* ndk/logger.rb : synchronize IOLogWriter output


2005-06-09(Thu) 17:18:21 +0900  Koichi Sasada  <ko1@atdot.net>

	* ndk/config.rb : set default file encoding to EUC


2005-06-09(Thu) 05:11:58 +0900  Koichi Sasada  <ko1@atdot.net>

	* ndk/config.rb : fix to get FilenameEncoding

	* ndk/server.rb : stop away message until server connection


2005-06-08(Wed) 07:56:17 +0900  Koichi Sasada  <ko1@atdot.net>

	* ndk/config.rb : clear if channel setting is not hash


2005-06-08(Wed) 07:42:17 +0900  Koichi Sasada  <ko1@atdot.net>

	* plugins/googlebot.nb : fix to use count default language


2005-06-08(Wed) 06:21:25 +0900  Koichi Sasada  <ko1@atdot.net>

	* ndk/server.rb : trap IOError and change error output

	* ndk/config.rb : support {prefix:(nick|user|host)} specifier

	* ndk/logger.rb : {user} -> {nick}

	* nadokarc : apply above changes

	* rice/irc.rb : output unless port is closed

	* plugins/backlogbot.nb : change spell (@store -> @stores)


2005-06-05(Sun) 22:47:15 +0900  Koichi Sasada  <ko1@atdot.net>

	* ndk/server.rb : PONG MISS message dlog -> slog


2005-05-31(Tue) 14:08:26 +0900  Koichi Sasada  <ko1@atdot.net>

	* nadokarc : change log setting of "#nadoka_check"


2005-05-29(Sun) 14:01:02 +0900  Koichi Sasada  <ko1@atdot.net>

	* ndk/server.rb, ndk/server_state.rb, ndk/logger.rb :
	NICK and QUIT logging from server_state

	* nadokarc, ndk/config.rb : change default PART, QUIT message format


2005-05-29(Sun) 12:53:48 +0900  Koichi Sasada  <ko1@atdot.net>

	* plugins/weba.nb : set default password on
