@@ -2,6 +2,12 @@
 # $Id$ 
 
 
+2005-06-13(Mon) 18:25:33 +0900  Koichi Sasada  <ko1@atdot.net>
+
+	* nadokarc, ndk/logger.rb, ndk/config.rb : support
+	:channel_name_in_file_name option for logging
+
+
 2005-06-13(Mon) 00:11:39 +0900  Koichi Sasada  <ko1@atdot.net>
 
 	* ndk/server_state.rb : fix typo
